--- a/css/styles.css
+++ b/css/styles.css
@@ -3937,9 +3937,9 @@ textarea.form-control-lg {
     transition: none;
   }
 }
-.nav-link:hover, .nav-link:focus {
+/* .nav-link:hover, .nav-link:focus {
   color: #c34e2e;
-}
+} */
 .nav-link.disabled {
   color: #6c757d;
   pointer-events: none;
